# marklight

./: .gitignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CM6-CLEANUP-EVAL.md  CM6-IMPLEMENTATION-TASKS.md  CM6-MANUAL-REGRESSION-RUNBOOK-2026-03-20.md  CM6-MIGRATION-PLAN.md  CM6-PERF-BASELINE.md  CM6-PM-CLEANUP-CHECKLIST.md  CM6-PM-REFERENCE-SCAN-2026-03-20.md  CM6-REGRESSION-CHECKLIST.md  CM6-REGRESSION-RESULTS-2026-03-20.md  CODE_REVIEW_REPORT.md  ENGINEERING_STANDARDS.md  LICENSE  LICENSE-COMMERCIAL.md  LICENSE-GPL  LICENSE.md  LICENSING.md  MARKLIGHT_MASTER_REPORT.md  MARKLIGHT_SUMMARY_GLM5.md  MarkLight-Analysis-Report-Gemini.md  README.md  RELEASE-NOTES-CM6-ONLY-DRAFT-2026-03-20.md  ROADMAP.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  test.md  vitest.config.ts
.github/workflows/: build.yml  sync-to-gitee.yml
docs/: LICENSE_NOTES.md  README.md  ROADMAP.md  architecture.md  phase-1-roadmap.md  tech-stack.md
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-window.json  secondary-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  events.rs  lib.rs  main.rs  menu.rs  models.rs  state.rs
src-tauri/src/commands/: config.rs  document.rs  fs.rs  image.rs  mod.rs  watch.rs  window.rs  workspace.rs
src/commands/: registry.ts
src/composables/: useAppWindowSession.ts  useCommandDispatcher.ts  useDocumentSession.ts  useExportActions.ts  useFileOperations.ts  useFileTree.ts  useImagePreview.ts  useMenuEvents.ts  useMenuShortcutsSync.ts  useWindowEvents.ts  useWorkspaceSession.ts
src/stores/: file.ts  settings.ts
src/themes/: index.ts  (+2 more)
website/: index.html
(+139 files in other folders)
