[package]
name = "marklight"
version = "1.0.0"
description = "MarkLight - A lightweight Markdown editor"
authors = ["luoxiaodou"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "marklight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-cli = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
trash = "5"
notify = "6.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"
